--- a/styles.css
+++ b/styles.css
@@ -127,12 +127,12 @@ button:hover {
 .option .button2:hover {
     background-color: rgba(255, 255, 255, 0.15);
 }
-.notes .header {
+#notes .header {
     text-align: center;
     align-items: center;
 
 }
-.notes .header h1 {
+#notes .header h1 {
     font-size: 48px;
     font-weight: bold;
     line-height: 58px;
@@ -140,12 +140,56 @@ button:hover {
     margin-bottom: 16px;
     color: #001931;
 }
-.notes .header p {
+#notes .header p {
     font-size: 16px;
     line-height: 20px;
     color: #627382;
 }
-.box .options {
-    display: flex;
-    border: 1px solid black;
-}
+ #notes .box{
+   
+   max-width: 1360px;
+   margin: 0 auto;
+ }
+ #notes .box {
+   display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+     gap: 24px;
+ }
+ .box .options{
+   padding: 24px;
+  margin-top: 44px;
+   max-width: 322px;
+   height: 300px;
+   border-radius: 8px;
+   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
+   gap: 24px;
+   align-items: center;
+   justify-content: center;
+   
+
+ }
+ .options img {
+   max-width: 32px;
+   padding: 1.5 2.5;
+   margin: 70px 131px 16px;
+   border-radius: 50%;
+   background-color: rgba(249, 85, 85, 1); 
+ }
+ .options h2 {
+    font-size: 24px;
+    font-weight: 500px;
+    color: #001931;
+    margin-top: 16px;
+    text-align: center;
+ }
+ .options p {
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color:#627382 ;
+    margin-top: 16px;
+ }
+   
+ 
