--- a/styles.css
+++ b/styles.css
@@ -191,5 +191,54 @@ button:hover {
     color:#627382 ;
     margin-top: 16px;
  }
-   
- 
+#brain {
+    display: flex;
+    gap: 60px ;
+    margin: 120px 120px;
+}
+#brain .image {
+    width: 600px;
+    height: 600px;
+    border-radius: 12px;
+}
+#brain .solution {
+    margin: 100px 0px;
+    width: 700px;
+}
+.solution h4 {
+    font-size: 16px;
+    font-weight: 400;
+    color: #30B868;
+
+}
+.solution h1 {
+    font-size: 48px;
+    font-weight: bold;
+    margin-top: 16px;
+    color: #001931;
+}
+.solution p {
+    font-size: 16px;
+    line-height: 20px;
+    margin-top: 16px;
+    color: #627382;
+}
+.solution ul {
+    list-style: none;
+    margin-top: 16px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #001931;
+    
+}
+ul li {
+    display: flex ;
+    gap: 6px;
+    padding-bottom: 16px;
+}
+ ul li img {
+    width: 20px;
+    height: 20px;
+    
+
+ }
