--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,32 @@ ul li {
  ul li img {
     width: 20px;
     height: 20px;
-    
+ }
 
+ #access {
+    text-align: center;
+    background-color: #F7F6F2;
+    margin: 120px;
+    max-width: 1360px;
+    height: 385px;
+ }
+ #access .access-header {
+  padding-top: 80px;
+    max-width: 1280px;
+ }
+ .access-header h1 {
+    font-size: 40px;
+    font-weight: bold;
+    color: #001931;
+ }
+ .access-header p {
+    font-size: 16px;
+    line-height: 24px;
+    color: #627382;
+    margin-top: 16px;
+ }
+ #access p {
+    font-size: 16px;
+    color: #627382;
+    margin-top: 16px;
  }
